--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
         <ul>
             <li><a href="news.html">1.08 News Article/1.13 My News Hub</a></li>
             <li><a href="copyright.html">2.04 Starter Gallery</a></li>
+            <li><a href="table.html">2.09 Building Tables</a></li>
     </body>
 </html>
