--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
             <li><a href="copyright.html">2.04 Starter Gallery</a></li>
             <li><a href="table.html">2.09 Building Tables</a></li>
             <li><a href="math.html">2.14 Math Test Form</a></li>
+            <li><a href="colors.html">3.03 Color Scheme</a></li>
     </body>
 </html>
