Home Page Update

--- a/index.html
+++ b/index.html
@@ -11,5 +11,33 @@
             <li><a href="table.html">2.09 Building Tables</a></li>
             <li><a href="math.html">2.14 Math Test Form</a></li>
             <li><a href="colors.html">3.04 Color Scheme</a></li>
+        </ul>
+        <h1>Grades</h1>
+        <table border=1>
+            <tr>
+                <td>1.08 Online News Article</td>
+                <td>14/15</td>
+            </tr>
+            <tr>
+                <td>1.13 News Hub</td>
+                <td>14/15</td>
+            </tr>
+            <tr>
+                <td>2.04 Starter Gallery</td>
+                <td>15/15</td>
+            </tr>
+            <tr>
+                <td>2.09 Building Tables</td>
+                <td>15/15</td>
+            </tr>
+            <tr>
+                <td>2.14 Math Test Form</td>
+                <td>14/15</td>
+            </tr>
+            <tr>
+                <td>3.04 Color Scheme</td>
+                <td>15/15</td>
+            </tr>
+        </table>
     </body>
 </html>
