--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <li><a href="table.html">2.09 Building Tables</a></li>
             <li><a href="math.html">2.14 Math Test Form</a></li>
             <li><a href="colors.html">3.04 Color Scheme</a></li>
+            <li><a href="menu.html">3.09 Restaurant Menu</a></li>
         </ul>
         <h1>Grades</h1>
         <table border=1>
@@ -37,6 +38,10 @@
             <tr>
                 <td>3.04 Color Scheme</td>
                 <td>15/15</td>
+            </tr>
+            <tr>
+                <td>3.09 Restaurant Menu</td>
+                <td>--/15</td>
             </tr>
         </table>
     </body>
