--- a/menu.html
+++ b/menu.html
@@ -6,17 +6,44 @@
     <body>
         <div style="width: 400px; height: 550px; border: solid thin black; margin-bottom: 10px; background-image: url('pictures/menu/breakfast/background.png'); background-repeat: repeat-y;"">
             <h1 style="text-align: center;">Breakfast</h1>
-            <ul>
+            <ul style="font-size: 24px; font-family: Comic Sans MS;">
                 <li>Pancake</li>
                 <li>Waffle</li>
                 <li>Rice</li>
             </ul>
+            <img src="pictures/menu/breakfast/waffle.jpg" style="width: 178px; margin-left: 10px; margin-right: 15px; border: solid thin black;">
+            <img src="pictures/menu/breakfast/waffle.jpg" style="width: 178px; border: solid thin black;"><br>
+            <img src="pictures/menu/breakfast/rice.jpg" style="width: 178px; margin-left: 110px; margin-right: 110px; border: solid thin black;">
         </div>
-        <div style="width: 400px; height: 550px; border: solid thin black; margin-bottom: 10px;">
+        <div style="width: 400px; height: 550px; border: solid thin black; margin-bottom: 10px; background-image: url('pictures/menu/lunch/background.png'); background-repeat: repeat-y;">
             <h1 style="text-align: center;">Lunch</h1>
+            <ul style="font-size: 24px; font-family: Comic Sans MS;">
+                <li>More Rice</li>
+                <li>Mystery Sandwich
+                    <ul>
+                        <li>You don't know what's on it so I hope you don't have allergies</li>
+                    </ul>
+                </li>
+                <li>Water</li>
+            </ul>
+            <img src="pictures/menu/lunch/water.jpg" style="width: 250px; margin-left: 74px; margin-right: 74px; border: solid thin black;">
         </div>
-        <div style="width: 400px; height: 550px; border: solid thin black; margin-bottom: 10px;">
+        <div style="width: 400px; height: 550px; border: solid thin black; margin-bottom: 10px; background-image: url('pictures/menu/dinner/background.png');">
             <h1 style="text-align: center;">Dinner</h1>
+            <ul style="font-size: 24px; font-family: Comic Sans MS;">
+                <li>Steak
+                    <ul>
+                        <li>Cooked to how I like it only so hope you like rare</li>
+                    </ul>
+                </li>
+                <li>Beans</li>
+                <li>Still More Rice
+                    <ul>
+                        <li>I love rice</li>
+                    </ul>
+                </li>
+            </ul>
+            <img src="pictures/menu/dinner/rice.jpg" style="width: 250px; margin-left: 74px; margin-right: 74px; border: solid thin black;">
         </div>
     </body>
 </html>
