--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <li><a href="math.html">2.14 Math Test Form</a></li>
             <li><a href="colors.html">3.04 Color Scheme</a></li>
             <li><a href="menu.html">3.09 Restaurant Menu</a></li>
+            <li><a href="schedule.html">3.14 Stylish Schedule</a></li>
         </ul>
         <h1>Grades</h1>
         <table border=1>
@@ -42,6 +43,10 @@
             <tr>
                 <td>3.09 Restaurant Menu</td>
                 <td>13/15</td>
+            </tr>
+            <tr>
+                <td>3.14 Stylish Schedule</td>
+                <td>--/15</td>
             </tr>
         </table>
     </body>
