--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <li><a href="colors.html">3.04 Color Scheme</a></li>
             <li><a href="menu.html">3.09 Restaurant Menu</a></li>
             <li><a href="schedule.html">3.14 Stylish Schedule</a></li>
+            <li><a href="staff.html">4.04 Staff Page</a></li>
         </ul>
         <h1>Grades</h1>
         <table border=1>
@@ -46,7 +47,7 @@
             </tr>
             <tr>
                 <td>3.14 Stylish Schedule</td>
-                <td>--/15</td>
+                <td>15/15</td>
             </tr>
         </table>
     </body>
