Update Home Page

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <li><a href="menu.html">3.09 Restaurant Menu</a></li>
             <li><a href="schedule.html">3.14 Stylish Schedule</a></li>
             <li><a href="staff.html">4.04 Staff Page</a></li>
+            <li><a href="staff.html">4.09 Flexible Puzzle</a></li>
         </ul>
         <h1>Grades</h1>
         <table border=1>
@@ -48,6 +49,14 @@
             <tr>
                 <td>3.14 Stylish Schedule</td>
                 <td>15/15</td>
+            </tr>
+            <tr>
+                <td>4.04 Staff Page</td>
+                <td>15/15</td>
+            </tr>
+            <tr>
+                <td>4.09 Flexible Puzzle</td>
+                <td>--/15</td>
             </tr>
         </table>
     </body>
