--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li><a href="menu.html">3.09 Restaurant Menu</a></li>
             <li><a href="schedule.html">3.14 Stylish Schedule</a></li>
             <li><a href="staff.html">4.04 Staff Page</a></li>
-            <li><a href="staff.html">4.09 Flexible Puzzle</a></li>
+            <li><a href="puzzle.html">4.09 Flexible Puzzle</a></li>
         </ul>
         <h1>Grades</h1>
         <table border=1>
