--- a/menu.html
+++ b/menu.html
@@ -3,6 +3,7 @@
     <head>
         <title>Menu</title>
     </head>
+    <a href="template.html">Save</a>
     <body>
         <div style="width: 400px; height: 550px; border: solid thin black; margin-bottom: 10px; background-image: url('pictures/menu/breakfast/background.png'); background-repeat: repeat-y;"">
             <h1 style="text-align: center;">Breakfast</h1>
