Finished the Scorecards

--- a/scorecard/index.html
+++ b/scorecard/index.html
@@ -8,6 +8,7 @@
         <ul>
             <li><a href="golf.html">Golf</a></li>
             <li><a href="bowling.html">Bowling</a></li>
+            <li><a href="shoots-and-ladders.html">Chutes and Ladders</a></li>
         </ul>
     </body>
 </html>
