Forgot to add it to home page

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <li><a href="schedule.html">3.14 Stylish Schedule</a></li>
             <li><a href="staff.html">4.04 Staff Page</a></li>
             <li><a href="puzzle.html">4.09 Flexible Puzzle</a></li>
+            <li><a href="scorecard/">4.14 Scorecards</a></li>
         </ul>
         <h1>Grades</h1>
         <table border=1>
@@ -56,6 +57,10 @@
             </tr>
             <tr>
                 <td>4.09 Flexible Puzzle</td>
+                <td>15/15</td>
+            </tr>
+            <tr>
+                <td>4.14 Scorecards</td>
                 <td>--/15</td>
             </tr>
         </table>
