--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <li><a href="staff.html">4.04 Staff Page</a></li>
             <li><a href="puzzle.html">4.09 Flexible Puzzle</a></li>
             <li><a href="scorecard/">4.14 Scorecards</a></li>
+            <li><a href="video.html">5.03 Video</a></li>
         </ul>
         <h1>Grades</h1>
         <table border=1>
@@ -61,6 +62,10 @@
             </tr>
             <tr>
                 <td>4.14 Scorecards</td>
+                <td>--/15</td>
+            </tr>
+            <tr>
+                <td>5.03 Video</td>
                 <td>--/15</td>
             </tr>
         </table>
