--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <li><a href="staff.html">4.04 Staff Page</a></li>
             <li><a href="puzzle.html">4.09 Flexible Puzzle</a></li>
             <li><a href="scorecard/">4.14 Scorecards</a></li>
-            <li><a href="video.html">5.03 Video</a></li>
+            <li><a href="video.html">5.04 Video Embedding Tutorial</a></li>
         </ul>
         <h1>Grades</h1>
         <table border=1>
@@ -65,7 +65,7 @@
                 <td>--/15</td>
             </tr>
             <tr>
-                <td>5.03 Video</td>
+                <td>5.04 Video Embedding Tutorial</td>
                 <td>--/15</td>
             </tr>
         </table>
