--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <li><a href="puzzle.html">4.09 Flexible Puzzle</a></li>
             <li><a href="scorecard/">4.14 Scorecards</a></li>
             <li><a href="video.html">5.04 Video Embedding Tutorial</a></li>
+            <li><a href="imitation.html">5.09 The Imitation</a></li>
         </ul>
         <h1>Grades</h1>
         <table border=1>
@@ -62,10 +63,14 @@
             </tr>
             <tr>
                 <td>4.14 Scorecards</td>
-                <td>--/15</td>
+                <td>15/15</td>
             </tr>
             <tr>
                 <td>5.04 Video Embedding Tutorial</td>
+                <td>15/15</td>
+            </tr>
+            <tr>
+                <td>5.09 The Imitation</td>
                 <td>--/15</td>
             </tr>
         </table>
